# testTempleteOfflineNewKit

./: .gitignore  .npmrc  .prettierrc  DEVELOPER_MANUAL.docx  DEVELOPER_MANUAL.md  README.md  eslint.config.js  netlify.toml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: ci.yml  migrate.yml  test.yml
apps/api/: package.json  tsconfig.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/: .easignore  app.json  eas.json  metro.config.js  package.json  tsconfig.json
apps/web/: .env.example  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1784553052174-53317aa9867.mjs  wrangler.toml
docs/: CHEATSHEET.md  COOP_ERP_PLAN.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  LAUNDRY_SHOP_PROPOSAL.docx  PLAN.md  PRD.md  architecture.md
docs/adr/: 001-use-turborepo.md  002-repository-pattern.md
e2e/: auth.spec.ts  customers.spec.ts  live-crud.spec.ts  loans.spec.ts  members.spec.ts  savings.spec.ts  seed-laundry-mock.js  smoke-all-modules.js  smoke-laundry-mock.js  test-driving-crud.js  test-laundry-crud.js  verify-approval-engine.py  verify-feature-flags.py  verify-hooks.py  verify-metadata-interpreter.py  verify-metadata-store.py
scripts/: capture-menu.mjs  generate-laundry-proposal.js
supabase/: combined_migration.sql  config.toml
supabase/migrations/: 00001_initial_schema.sql  00002_sync_entities.sql  (+8 more)
test-results/: .last-run.json
(+151 files in other folders)
